Bug 347029 - when using mouse scroll to switch activities it wakes up and switches between stopped/paused activities
Summary: when using mouse scroll to switch activities it wakes up and switches between...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activity Switcher sidebar (other bugs)
Version First Reported In: 5.3.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-01 23:01 UTC by Gauthier
Modified: 2015-05-03 17:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gauthier 2015-05-01 23:01:11 UTC
I'm am using plasma 5.3 but it was also the case in 5.2.

Reproducible: Always

Steps to Reproduce:
1. Create two or more activities and configure desktop to use mouse scroll to switch between activities
2. stop/pause one of the activity
3. use the scroll to switche activity

Actual Results:  
It switches even on the activity that WAS stopped/paused and after the activity is active.

Expected Results:  
It should switch only between active activities and leave the other ones stopped/paused
Comment 1 Gauthier 2015-05-02 09:34:06 UTC
Just for precision, this bug happens only when using mouse scroll to switch activities, not when using keyborad shortcut ot activity bar/manager.
Comment 2 Ivan Čukić 2015-05-03 07:04:54 UTC
Git commit ddb7b332e53e8eddaf8d9e639ca45f233702a86b by Ivan Čukić.
Committed on 03/05/2015 at 07:04.
Pushed by ivan into branch 'master'.

When switching activities, use only the running ones

This makes the activities mouse plugin for plasma shell cycle only
through the running activities.
REVIEW: 123597

M  +11   -7    containmentactions/switchactivity/switch.cpp

http://commits.kde.org/plasma-workspace/ddb7b332e53e8eddaf8d9e639ca45f233702a86b
Comment 3 Ivan Čukić 2015-05-03 17:13:38 UTC
Git commit 1e460f3158eb4cf2eb515cb60f98e6370915876a by Ivan Čukić.
Committed on 03/05/2015 at 17:12.
Pushed by ivan into branch 'Plasma/5.3'.

When switching activities, use only the running ones

This makes the activities mouse plugin for plasma shell cycle only
through the running activities.
REVIEW: 123597

M  +11   -7    containmentactions/switchactivity/switch.cpp

http://commits.kde.org/plasma-workspace/1e460f3158eb4cf2eb515cb60f98e6370915876a