When switching activities, use only the running ones

This makes the activities mouse plugin for plasma shell cycle only
through the running activities.

BUG: 347029
REVIEW: 123597